--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 /20-12-22
 /10-01-23/node_modules/
 /10-01-23-part2/node_modules/
+/11-01-23/node_modules/
+/code-week/
+/cooking-class/
+/23-12-22
+/03-11-22/
