--- a/router-react/package.json
+++ b/router-react/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "sort-by": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
