--- a/next-project/package.json
+++ b/next-project/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-css-modules": "^4.7.11",
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "sass": "^1.58.0",
+    "slick-carousel": "^1.8.1"
   }
 }
